@@ -1,4 +1,4 @@
-rblcheck 1.1 - Command-line interface to Paul Vixie's RBL filter.
+rblcheck 1.2 - Command-line interface to Paul Vixie's RBL filter.
 Copyright (C) 1997, Edward S. Marshall <emarshal@logic.net>
 
 This program is free software; you can redistribute it and/or modify
