@@ -1,17 +1,11 @@
-Releases have been tested on the following platforms:
-
-1.1:
-
-Linux 2.x/libc5
-Solaris 2.6
-
-1.0:
+I speculate that this release will compile on the following platforms. If
+you have a success story on something else, let me know at emarshal@logic.net.
 
 BSD/OS 2.1
-Digital Unix
-FreeBSD 2.2.5-STABLE
-NeXTSTEP (with patches)
+Digital UNIX
+FreeBSD 2.2.x
+HP/UX 10.x
 Linux 2.x+libc5
 Linux 2.x+glibc/libc6
-Solaris 2.5.1
-Solaris 2.6
+SunOS 4.x
+Solaris 2.x
