@@ -3,8 +3,8 @@
 # $Id$
 #
 # $Log$
-# Revision 1.1  2000/04/21 15:22:43  logic
-# Update to version 1.1.
+# Revision 1.2  2000/04/21 15:22:46  logic
+# Update to version 1.2.
 #
 # Revision 1.1  1998/01/27 02:10:33  emarshal
 # Added dump.c, a quick utility for dumping an RR (sort of);
